<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/secured_data"
          android:gravity="center"
          android:textColor="@color/colorBlack"
          android:layout_margin="5dp"
          android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/disclosure_explain"
            android:scrollbars="vertical"
            android:textColor="@color/colorGray"
            android:textSize="15sp" />

        <ImageView
            android:contentDescription="@string/disclosure_diagram"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@drawable/disclosure"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:text="@string/dont_worry"
            android:scrollbars="vertical"
            android:textColor="@color/colorGray"
            android:textSize="15sp" />

          <Button
              android:id="@+id/login_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/colorAccent"
              android:textColor="@color/colorWhite"
              android:textAllCaps="false"
              android:layout_marginTop="30dp"
              android:text="@string/enter"/>

  </LinearLayout>

</LinearLayout>
