<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tourwithme_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorGray">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="88dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="@+id/myFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_showProfile"
        android:layout_width="128dp"
        android:layout_height="61dp"
        android:contentDescription="@string/show_profile"
        android:drawableEnd="@drawable/person"
        android:text="@string/show_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_showTour"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myFrameLayout"
        app:layout_constraintVertical_bias="0.626" />


    <Button
        android:id="@+id/btn_showTour"
        android:layout_width="121dp"
        android:layout_height="59dp"
        android:drawableEnd="@drawable/next"
        android:text="@string/show_tour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myFrameLayout"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/btn_showGroup"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:drawableEnd="@drawable/group"
        android:text="@string/show_groups"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toEndOf="@+id/btn_showTour"
        app:layout_constraintTop_toBottomOf="@+id/myFrameLayout"
        app:layout_constraintVertical_bias="0.555" />

    <FrameLayout
        android:id="@+id/myFrameLayout"
        android:layout_width="408dp"
        android:layout_height="632dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>